--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,12 +8,30 @@ a {
     text-decoration: none;
 }
 
+/* \/\/\/ убрать обводку с активных полей ввода \/\/\/ */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+-webkit-appearance: none;
+margin: 0;
+}
+
+textarea:focus, input:focus{
+    outline: none;
+}
+
+/* ^^^^ убрать обводку с активных полей ввода ^^^^*/
 
 * { 
     margin: 0; 
     padding: 0;
     font-family: Onest, Arial;
   }
+
+  ul {
+    list-style-type: none;
+  }
+
+/* ЗАГОЛОВОК */
 
   .header_default {
     display: block;
@@ -177,17 +195,542 @@ a {
 
 
 
-    /* PAGE MAIN PART */
-    /* PAGE MAIN PART */
-    /* PAGE MAIN PART */
+    /* PRIMARY INDEX PART */
+    /* PRIMARY INDEX PART */
+    /* PRIMARY INDEX PART */
 
+    /* Заголовок */
+
+    .layout_page {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .index_page {
+        width: 1200px;
+    }
+
+    .page_title {
+        display: flex;
+        margin: 25px 0 25px 0;
+    }
+
+    .page_title_headers{
+        align-items: center;
+        margin-right: 40px;
+    }
+
+    .page_title_h1 {
+        font-weight: 750;
+        font-size: 26px;
+    }
+
+    .page_title_link {
+        align-content:end;
+    }
+
+    .page_titleHowTo_link {
+        color: #808080;
+        font-weight: 500;
+        font-size: 14px;
+    }
+        .page_titleHowTo_link:hover {
+            color: #1441B1;
+        }
+
+    /* хайбар (конфигуратор и аукционы) */
     
+    .index_highBar {
+        display: flex;
+        margin-bottom: 25px;
+    }
+        /* Панель конфигуратора */
+
+        .index_configurator_menu {
+        display: flex;
+        border-radius: 20px;
+        margin-right: 120px;
+        padding: 16px 30px 30px;
+        box-shadow: 0px 0px 20px rgb(241, 241, 241);
+        height: fit-content;
+        width: fit-content;
+        }
+
+        /* Панель результатов */
+
+        .index_configurator_menu_result {
+            width: 380px;
+            margin-right: 30px;
+        }
+
+        .index_configurator_results_title {
+            font-size: 22px;
+            font-weight: 800;
+            margin-bottom: 16px;
+        }
+
+        /* Карточки авто конфигуратора */
+
+        .index_configurator_menu_itemCard {
+            border-radius: 12px;
+            border-style: solid;
+            border-color: #DBDBDB;
+            border-width: 1px;
+            padding: 10px;
+            margin-bottom: 18px;
+        }   
+
+        .configurator_infoBlock1{
+            display: flex;
+            height: 64px;
+            margin-bottom: 12px;
+        }
+
+        .configurator_itemImage{
+            height: 64px;
+            border-radius: 14px;
+            margin: 0 24px 0 0;
+        }
+
+        .configurator_infoBlockMileageYear {
+            align-content: center;
+            margin-right:auto;
+        }
+
+        .configurator_result_mileage {
+            font-weight: 800;
+            color: black;
+        }
+
+        .configurator_result_year {
+            font-weight: 800;
+            color:#00B94D;
+        }
 
 
+        .configurator_infoBlockCarSpecs {
+            display: flex;
+            flex-direction: column;
+            width: 80px;
+        }
 
-    
+        .configurator_infoBlockCarSpecs-Upper {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: auto;
+        }
+
+        .configurator_infoBlockCarSpecs-UpperPrimary {
+            text-align: center;
+
+        }
+
+        .configurator_result_displacement_value {
+            font-weight: 800;
+            color:black;
+        }
+
+        .configurator_result_displacement {
+            font-size: 11px;
+            font-weight: 700;
+            margin-top: -4px;
+            color: #7B7B7B;
+        }
+
+        .configurator_infoBlockCarSpecs-UpperSecondary {
+            text-align: center;
+        }
+
+        .configurator_result_hp_value {
+            font-weight: 800;
+            color:black;
+        }
+
+        .configurator_result_hp{
+            font-size: 11px;
+            font-weight: 700;
+            margin-top: -4px;
+            color: #7B7B7B;
+            
+        }
+
+        .configurator_infoBlockCarSpecs-Lower {
+            text-align: center;
+        }
+
+        .configurator_result_fuel{
+            font-size: 10px;
+            font-weight: 700;
+            color:#7B7B7B
+        }
+
+        .configurator_result_fuel_value {
+            font-size: 12px;
+            font-weight: 800;
+            color: black;
+        }
+
+        .configurator_infoBlock2{
+            display: flex;
+            align-items:center ;
+        }
+
+        .configurator_result_price {
+            font-size: 14px;
+            font-weight: 700;
+            color: black;
+            text-align: center;
+            width: 94px;
+            margin-right: 24px;
+        }
+
+        .configurator_result_country {
+            display: flex;
+            margin-right: auto;      
+        }
+
+        .configurator_result_img {
+            width: 22px;
+            margin-right: 8px;
+        }
+
+        .configurator_result_countryName {
+            font-weight: 700;
+            font-size: 15px;
+            color: black;
+        }
+
+        .configurator_result_color {
+            display: flex;
+            width: auto;
+            align-content: center ;
+        }
+
+        .configurator_result_color_label {
+            margin-right: 8px;
+            font-weight: 700;
+            color: black;
+        }
+
+        /* Панель конфигурации */
 
 
+        .index_configurator_menu_formHeading{
+            display: flex;
+            align-content: center;
+            margin-bottom: 13px;
+        }
+
+        .index_configurator_menu_formHeading_logo{
+            margin-right: 12px;
+        }
+
+        .index_configurator_menu_heading_text {
+            font-size: 22px;
+            font-weight: 800;
+        }
+
+        .index_configurator_menu_formQuiz {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .formQuiz_carBrand {
+            display: flex;
+            padding: 0px 16px;
+            height: 45px;
+            border-style: solid;
+            border-width: 1px;
+            border-color: black;
+            border-radius: 12px;
+            margin-bottom: 12px;
+        }
+
+        .formQuiz_carBrandText {
+            margin-right: auto;
+            align-content: center;
+        }
+
+        .configuratorLabels_primary {
+            font-size: 12px;
+            font-weight: 600;
+            color: #919191;
+        }
+
+        .configuratorSigns_primary {
+            font-weight: 650;
+        }
+
+        .index_configurator_menu_countries1{
+            display: flex;
+            margin-bottom: 12px;
+        }
+
+        .index_configurator_menu_countries_decision{
+            margin-right: auto;
+        }
+
+        .index_configurator_menuLabel_importCountries {
+            font-weight: 600;
+            font-size: 12px;
+            margin-bottom: 4px;
+            width: auto;
+            text-align: center;
+            color: #919191;
+        }
+
+        .index_configurator_menu_countries1_Shifters{
+            align-content: end;
+            width: 30px;            
+        }
+
+        .index_configurator_menuSelAll_button {
+            height: 23px;
+            width: auto;
+            font-weight: 600;
+            padding: 1px 22px;
+            background-color: transparent;
+            border-radius: 8px;
+            border-width: 1px;
+        }
+
+        .index_configurator_menu_countryballs{
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 14px;
+        }
+
+        #configuratorCountryballs {
+            border-radius: 30px;
+        }
+
+        .index_configurator_menu_pricingAndStatus {
+            display: flex;
+            margin-bottom: 14px;
+        }
+
+        .configurator_pricingBlock {
+            display: flex;
+            margin-right: auto;
+            justify-content: space-between;
+        }
+
+        .configurator_pricingBlock_field {
+            height: 50px;
+            width: 80px;
+            margin-right: 12px;
+            align-content: center;
+            border-radius: 12px;
+            border-width: 1px;
+            border-style: solid;
+            border-color: #7B7B7B;
+            padding: 0px 16px;
+        }
+
+        .configurator_pricing_label_primary {
+            font-size: 12px;
+            color: #919191;
+            font-weight: 600;
+        }
+
+        .configurator_InputPrice {
+            width: 100%;
+            background-color: transparent;
+            border-style: none;
+            font-size: 14px;
+            font-weight: 600;   
+        }
+
+        .configurator_status_button_a {
+            width: 100%;
+            height: 45%;
+            background-color: transparent;
+            font-weight: 600;
+            border-radius: 8px;
+            border-width: 1px;
+            margin-bottom: 6px;
+        }
+
+        .configurator_status_button_b {
+            width: 100%;
+            height: 45%;
+            background-color: transparent;
+            font-weight: 600;
+            border-radius: 8px;
+            border-width: 1px;
+        }
+
+        .index_configurator_menu_resultsAndAddons {
+            display: flex;
+            align-items: center;
+            height: 46px;
+        }
+
+        .configurator_button_ViewFeed {
+            width: 220px;
+            padding: 12px 16px;
+            margin-right: 12px;
+            border-radius: 12px;
+            border-style: none;
+            background-color:#1441B1;
+            font-weight: 600;
+            font-size: 14px;
+            color: white;
+            cursor: pointer;
+        }
+
+        .configurator_menu_resultsAndAddonsLabel {
+            font-weight: 600;
+            font-size: 13px;
+            color:#1441B1;
+            margin-right: 4px;
+        }
+
+        .configurator_menu_resultsAndAddonsImg {
+            height: 8px;
+            color: #1441B1;
+        }
+
+        /* Панель аукциона */
 
 
+        .auction_import_menuHeading1{
+            font-size: 22px;
+            font-weight: 800;
+            margin-bottom: 12px;
+        }
+
+        .auction_import_misc {
+            display: flex;
+            align-items: center;
+            margin-bottom: 12px;
+        }
+
+        .auction_import_menuHeading2 {
+            width: 70%;
+            margin-right: auto;
+            font-size: 14px;
+            font-weight: 600;
+        }
+
+        .auction_import_jp_flag {
+            height: 72px;
+        }
+
+        .page_titleHowTo_link_auction {
+            color: #808080;
+            font-weight: 500;
+            font-size: 14px;
+        }
+
+        .howto_auctions {
+            margin-bottom: 12px;
+        }
+
+        /* Карточка аукциона */
+
+        .auction_vehicleCard {
+            display: flex;
+            border-radius: 12px;
+            border-style: solid;
+            border-color: rgb(223, 223, 223);
+            border-width: 1px;
+            padding: 6px 12px 6px 6px;
+            margin-bottom: 12px;
+        }
+
+        .auction_vehicleCard_info{
+            width: 100%;
+        }
+
+        .auction_img {
+            width: 64px;
+            border-radius: 8px;
+        }
+
+        .auction_vehicleCard_visual{
+            margin-right: 12px;
+        }
+
+        .auction_lot_num{
+            width: 100%;
+            padding: 2px 0;
+            text-align: center;
+            border-radius: 6px;
+            font-size: 10px;
+            font-weight: 600;
+            color: white;
+            background-color: red;
+        }
+
+        .auction_title{
+            color: black;
+            font-size: 14px;
+            font-weight: 600;
+            margin-bottom: px;
+        }
+
+        .auction_basicInfo {
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+            color: black;
+            font-size: 14px;
+            font-weight: 600;
+            margin-bottom: 4px;
+        }
+
+        .auction_deadline{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            color: red;
+            font-size: 14px;
+            font-weight: 600;
+        }
+        .auction_progressBar01 {
+            height:4px;
+            width: 100px;
+            border-radius: 2px;
+            background-color: red;
+        }
+
+        .auction_action_menu {
+            display: flex;
+            height: 46px;
+            align-items: center;
+        }
+
+        .label_auction_lotsStatus {
+            font-size: 11px;
+            text-align: right;
+            margin-right: 12px;
+            width: 60px;
+        }
+
+        .page_auction_link{
+            width: 100%;
+            height: 100%;
+        }
+
+        .button_AuctionFeed {
+            width: 100%;
+            height: 100%;
+            padding: 12px 16px;
+            border-radius: 12px;
+            border-style: none;
+            background-color:red;
+            font-weight: 600;
+            font-size: 14px;
+            color: white;
+            cursor: pointer;
+        }
+
+        /* Заголовок пользовательского фида */
+
+        .page_feed_title {
+            margin-bottom: 25px;
+        }
+        
+        /* лоубар (конфигуратор и аукционы) */
 
