--- a/src/css/main.css
+++ b/src/css/main.css
@@ -56,6 +56,11 @@ textarea:focus, input:focus{
         display: block;
         height: 52px;
         margin-right: 50px;
+        -webkit-user-drag: none;
+        user-select: none;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
     }
 
     .header_searchLine-main {
@@ -207,7 +212,7 @@ textarea:focus, input:focus{
     }
 
     .index_page {
-        width: 1200px;
+        justify-content: space-between;
     }
 
     .page_title {
@@ -221,7 +226,7 @@ textarea:focus, input:focus{
     }
 
     .page_title_h1 {
-        font-weight: 750;
+        font-weight: 800;
         font-size: 26px;
     }
 
@@ -238,22 +243,30 @@ textarea:focus, input:focus{
             color: #1441B1;
         }
 
-    /* хайбар (конфигуратор и аукционы) */
-    
-    .index_highBar {
+    /* левый контекстный ряд (конфигуратор и фид) */
+
+
+    .index_platform {
         display: flex;
-        margin-bottom: 25px;
+        margin-bottom: 40px;
+    }
+    
+    .index_leftBar {
+        display: flex;
+        flex-direction: column;
+        width: 800px;
+        margin-right: 120px;
     }
         /* Панель конфигуратора */
 
         .index_configurator_menu {
         display: flex;
         border-radius: 20px;
-        margin-right: 120px;
         padding: 16px 30px 30px;
+        margin-bottom: 25px;
         box-shadow: 0px 0px 20px rgb(241, 241, 241);
         height: fit-content;
-        width: fit-content;
+        width: 740px;
         }
 
         /* Панель результатов */
@@ -269,6 +282,12 @@ textarea:focus, input:focus{
             margin-bottom: 16px;
         }
 
+        .index_configurator_menu_resultPanel {
+            display: flex;
+            flex-direction: column;
+            gap: 18px;
+        }
+
         /* Карточки авто конфигуратора */
 
         .index_configurator_menu_itemCard {
@@ -277,7 +296,6 @@ textarea:focus, input:focus{
             border-color: #DBDBDB;
             border-width: 1px;
             padding: 10px;
-            margin-bottom: 18px;
         }   
 
         .configurator_infoBlock1{
@@ -423,6 +441,11 @@ textarea:focus, input:focus{
 
         .index_configurator_menu_formHeading_logo{
             margin-right: 12px;
+            -webkit-user-drag: none;
+            user-select: none;
+            -moz-user-select: none;
+            -webkit-user-select: none;
+            -ms-user-select: none;
         }
 
         .index_configurator_menu_heading_text {
@@ -444,7 +467,9 @@ textarea:focus, input:focus{
             border-color: black;
             border-radius: 12px;
             margin-bottom: 12px;
+            cursor: pointer;
         }
+        
 
         .formQuiz_carBrandText {
             margin-right: auto;
@@ -492,7 +517,12 @@ textarea:focus, input:focus{
             background-color: transparent;
             border-radius: 8px;
             border-width: 1px;
+            cursor: pointer;
         }
+
+                .index_configurator_menuSelAll_button:hover {
+                    opacity: 75%;
+                }
 
         .index_configurator_menu_countryballs{
             display: flex;
@@ -549,7 +579,12 @@ textarea:focus, input:focus{
             border-radius: 8px;
             border-width: 1px;
             margin-bottom: 6px;
+            cursor: pointer;
         }
+
+                .configurator_status_button_a:hover {
+                    opacity: 75%;
+                }
 
         .configurator_status_button_b {
             width: 100%;
@@ -558,7 +593,12 @@ textarea:focus, input:focus{
             font-weight: 600;
             border-radius: 8px;
             border-width: 1px;
+            cursor: pointer;
         }
+
+                .configurator_status_button_b:hover {
+                opacity: 75%;
+                }
 
         .index_configurator_menu_resultsAndAddons {
             display: flex;
@@ -579,25 +619,36 @@ textarea:focus, input:focus{
             cursor: pointer;
         }
 
+                .configurator_button_ViewFeed:hover {
+                    opacity: 75%;
+                }
+
         .configurator_menu_resultsAndAddonsLabel {
             font-weight: 600;
             font-size: 13px;
             color:#1441B1;
             margin-right: 4px;
+            cursor: pointer;
         }
 
         .configurator_menu_resultsAndAddonsImg {
             height: 8px;
             color: #1441B1;
+            cursor: pointer;
         }
 
         /* Панель аукциона */
 
+        .auction_import_menu {
+            width: auto;
+            margin-bottom: 75px;
+        }
 
         .auction_import_menuHeading1{
             font-size: 22px;
             font-weight: 800;
             margin-bottom: 12px;
+            width: 256px;
         }
 
         .auction_import_misc {
@@ -607,23 +658,40 @@ textarea:focus, input:focus{
         }
 
         .auction_import_menuHeading2 {
-            width: 70%;
-            margin-right: auto;
+            width: 200px;
             font-size: 14px;
             font-weight: 600;
         }
 
         .auction_import_jp_flag {
-            height: 72px;
+            height: 84px;
+            margin-left: -70px;
+            -webkit-user-drag: none;
+            user-select: none;
+            -moz-user-select: none;
+            -webkit-user-select: none;
+            -ms-user-select: none;
         }
 
         .page_titleHowTo_link_auction {
             color: #808080;
             font-weight: 500;
+            width: fit-content;
             font-size: 14px;
         }
 
+                .page_titleHowTo_link_auction:hover {
+                    color: red;
+                }
+
         .howto_auctions {
+            margin-bottom: 12px;
+        }
+
+        .auction_vehicleList {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
             margin-bottom: 12px;
         }
 
@@ -636,7 +704,8 @@ textarea:focus, input:focus{
             border-color: rgb(223, 223, 223);
             border-width: 1px;
             padding: 6px 12px 6px 6px;
-            margin-bottom: 12px;
+            min-width: inherit;
+
         }
 
         .auction_vehicleCard_info{
@@ -701,11 +770,17 @@ textarea:focus, input:focus{
             align-items: center;
         }
 
+        .auction_action_menu {
+            width: auto;
+        }
+
         .label_auction_lotsStatus {
             font-size: 11px;
+            font-weight: 600;
             text-align: right;
             margin-right: 12px;
-            width: 60px;
+            width: 70px;
+            color: red;
         }
 
         .page_auction_link{
@@ -726,11 +801,347 @@ textarea:focus, input:focus{
             cursor: pointer;
         }
 
+                .button_AuctionFeed:hover {
+                    opacity: 75%;
+                }
+
         /* Заголовок пользовательского фида */
 
         .page_feed_title {
             margin-bottom: 25px;
+            height: auto;
+        }
+
+        .feed_title {
+            font-size: 26px;
+            font-weight: 800;
         }
         
-        /* лоубар (конфигуратор и аукционы) */
+        /* правый контекстный ряд (фид и форум) */
+
+        .index_rightBar {
+            display: flex;
+            flex-direction: column;
+            width: 300px;
+            height: 100%;
+            margin-bottom: 25px;
+        }
+
+        .userFeed {
+            display: grid;
+            grid-template-columns: repeat(3, 240px);
+            justify-content: space-between;
+            column-gap: auto;
+            width: inherit;
+            row-gap: 26px;
+            margin-bottom: 25px;
+        }
+
+        .itemFeed_vehicle {
+            width: 240px;
+            height: auto;
+        }
+
+        .itemFeed_vehicle_linkOnly{
+            width: inherit;
+        }
+
+        .itemFeed_vehicle_img {
+            width: inherit;
+            border-radius: 8px;
+        }
+
+        .itemFeed_vehicle_info_L1 {
+            display: flex;
+        }
+
+            .itemFeed_vehicle_name {
+                font-size: 13px;
+                font-weight: 800;
+                color: black;
+                margin-right: auto;
+            }
+
+            .itemFeed_vehicle_mileage {
+                font-size: 12px;
+                font-weight: 600;
+                color: #555;
+            }
+
+        .itemFeed_vehicle_info_L2{
+            font-size: 13px;
+            font-weight: 600;
+            color: #555;
+        }
+
+        .itemFeed_vehicle_info_L3 {
+            display: flex;
+            justify-content: space-between;   
+            align-items: center;   
+        }
+
+        .itemFeed_vehicle_ETA {
+            font-size: 12px;
+            font-weight: 600;
+            color: #00B94D;
+        }
+
+        .itemFeed_vehicle_flag {
+            height: 16px;
+            border-radius: 16px;
+        }
+
+        .itemFeed_vehicle_price {
+            font-size: 13px;
+            font-weight: 800;
+            color: black;
+            
+        }
+
+        .index-updateFeed{
+            display: flex;
+            justify-content: center;
+        }
+
+
+        .updateFeedButton {
+            background-color: #1441B1;
+            border-radius: 12px;
+            color: white;
+            font-size: 14px;
+            font-weight: 600;
+            padding:12px 52px;
+            border-style: none;
+        }
+
+        .index_userFeed_forum {
+            width: 100%;
+        }
+        
+        .forum_logo, .forum_link {
+            width: 100%;
+            margin-bottom: 25px;
+        }
+
+        .forumFeed_items {
+            display: flex;
+            flex-direction: column;
+            gap: 28px;
+        }
+
+        .forumFeed_articleNewsIMG {
+            width: 100%;
+            border-radius: 10px;
+            margin-bottom: 8px;
+            -webkit-user-drag: none;
+            user-select: none;
+            -moz-user-select: none;
+            -webkit-user-select: none;
+            -ms-user-select: none;
+        }
+
+        .forumFeed_articleNews_dataSRC {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 8px;
+            font-size: 12px;
+            font-weight: 600;
+            color: #555;
+        }
+
+        .forumFeed_articleNews_Title {
+            color: black;
+            font-size: 18px;
+            font-weight: 800;
+            padding-right: 12px;
+        }
+
+        .forumFeed_forumSection{
+            background: linear-gradient(to right, #5254d6 0%,#c5926c 100%);
+            height: auto;
+            padding: 12px 18px;
+            border-radius: 12px;
+        }
+
+        .forumFeed_forumSection_def{
+            background: linear-gradient(to right, #ebeef4 0%,#ffffff 100%);
+            height: auto;
+            padding: 12px 18px;
+            border-radius: 12px;
+        }
+
+        .page_forum_link {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .forumFeed_sunshinePRO_header {
+            display: flex;
+            margin-bottom: 4px;
+        }
+
+        .pro_lightBoltImg {
+            margin-right: 12px;
+        }
+
+        .forumFeed_sunshinePRO_STATUS-SUB {
+            color:white;
+            font-size: 16px;
+            font-weight: 600;
+        }
+
+        .forumFeed_sunshinePRO_LM {
+            color: white;
+            font-size: 12px;
+            font-weight: 500;
+        }
+
+        .forumFeed_onlineCounter {
+            display: flex;
+            align-items: center;
+        }
+
+        .forumFeed_onlineCounter_img {
+            width: 16px;
+            margin-right: 6px;
+        }
+
+        .forumFeed_onlineCounter_text_a {
+            font-size: 16px;
+            font-weight: 500;
+            color: white;
+        }
+
+        .forumFeed_onlineCounter_text_b {
+            font-size: 16px;
+            font-weight: 500;
+            color: #00B94D;
+        }
+
+        .forumFeed_sunshine_title {
+            color:black;
+            font-size: 16px;
+            font-weight: 600;
+        }
+
+        .forumFeed_sunshine_LM {
+            color: #555;
+            font-size: 12px;
+            font-weight: 600;
+        }
+
+        .forumFeed_articleUser {
+            margin-bottom: 28px;
+        }
+
+        .page_userArticle_img {
+            width: 100%;
+            border-radius: 12px;
+            margin-bottom: 12px;
+            -webkit-user-drag: none;
+            user-select: none;
+            -moz-user-select: none;
+            -webkit-user-select: none;
+            -ms-user-select: none;
+        }
+
+        .forumFeed_article-userInfo {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+
+        .forumFeed_article-pfp {
+            height: 30px;
+            margin-right: 12px;
+        }
+
+        .forumFeed_article-username {
+            color: black;
+            font-size: 13px;
+            font-weight: 700;
+        }
+
+        .forumFeed_article-userAge {
+            color: #A6A6A6;
+            font-size: 12px;
+            font-weight: 600;
+        }
+
+        .forumFeed_articleUser-title {
+            color: black;
+            font-size: 18px;
+            font-weight: 800;
+            margin-bottom: 6px;
+        }
+
+        .forumFeed_articleUser-desc{
+            color: #949494;
+            font-size: 14px;
+            font-weight: 450;
+            mask-image: linear-gradient(180deg, #000 60%, transparent);
+
+        }
+
+        /* подвал */
+
+        .footer_default {
+            border-top: 1px solid #EBEEF4;
+            height: auto;
+            }
+        
+            .footer_lineContent {
+                display: flex;
+                justify-content: space-around;
+            }
+        
+            .footer_flex_container_aligner {
+                width: 1200px;
+                padding: 24px 30px 0;
+            }
+        
+
+        .footer_actionLabels {
+            display: flex;
+            gap: 30px;
+            font-weight: 400;
+            font-size: 16px;
+            margin-bottom: 36px;
+        }
+
+        .footer_actionLabels a {
+            color: #1441B1;
+        }
+
+        .footer_SMIcons {
+            display: flex;
+            gap: 48px;
+        }
+
+        .footer_SMIcons img {
+            opacity: 20%;
+            width: 24px;
+            margin-bottom: 28px;
+        }
+     
+            .footer_lineContent_b {
+                display: flex;
+                border-top: 1px solid #c2c2c2;
+                justify-content: space-around;
+            }
+        
+            .footer_flex_container_aligner_b {
+                width: 1200px;
+                padding: 18px 30px 18px;
+            }
+
+        .footer_legalBottom {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .footer_legalBottomLabel {
+            color: #808080;
+            font-size: 14px;
+        }
 
