--- a/src/css/main.css
+++ b/src/css/main.css
@@ -213,6 +213,7 @@ textarea:focus, input:focus{
 
     .index_page {
         justify-content: space-between;
+        padding: 0 30px;
     }
 
     .page_title {
@@ -264,7 +265,7 @@ textarea:focus, input:focus{
         border-radius: 20px;
         padding: 16px 30px 30px;
         margin-bottom: 25px;
-        box-shadow: 0px 0px 20px rgb(241, 241, 241);
+        box-shadow: 0px 0px 20px rgb(245, 245, 245);
         height: fit-content;
         width: 740px;
         }
